--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apicloud-vue",
+  "name": "multivue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
     "vue": "^2.5.17"
   },
   "devDependencies": {
+    "@vue/babel-preset-app": "^3.2.0",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
